# iz

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  PAPER_DISCUSSION.md  PAPER_METHOD.md  PAPER_OUTLINE.md  README.md  RELEASE_v0.3.md  justfile  pyproject.toml
.github/workflows/: deploy.yml
api/: bench.json
api/facility/: adana-cimento.json  akcansa-buyukcekmece.json  akcansa-canakkale.json  akcansa-ladik.json  asas-akyazi.json  bagfas-bandirma.json  baticim-izmir.json  index.json  (+24 more)
data/: beirle_match_audit_grade.csv  enmap_scenes_index.csv  known_disclosure_pdfs.csv  s5p_no2_aggregated.csv  s5p_no2_per_facility.parquet  tr_facilities.csv  tr_facility_known_emissions.csv
marketing/: calculator.html  flyer_iz.html  paper_preview_v0.html  report_akcansa_v0.html
notebooks/: 01_s5p_akcansa.py  pass1_colab.ipynb
outreach/: association_template.md  custom_domain_howto.md  enmap_access_howto.md  linkedin_post_tr.md  operator_template_en.md  operator_template_tr.md  press_kit.md
paper/: iz_v0.md
reports/: akcansa_s5p_v0.csv  baselines.json  baselines_no_ct.json  bootstrap_ci.json  climate_trace_tr.parquet  climate_trace_tr_details.parquet  climate_trace_tr_joined.parquet  conformal_ci.json  known_pdfs_inventory.csv  lodo_aggregated.json  lodo_aggregated.pre_beirle.json  lodo_aggregated.with_beirle.json  lodo_ci.json  lodo_results.json  lopo_ef_eval.json  tr_facility_disclosure_inventory.csv  tr_facility_disclosures.parquet
sales/: cosigner_outreach.md  targets.md
site/: _redirects  index.html  robots.txt  sitemap.xml
tests/: test_bench.py
(+264 files in other folders)
