[project]
name = "iz"
version = "0.0.1"
description = "Satellite + AI emissions verification for Turkish CBAM exporters"
requires-python = ">=3.11"
authors = [{ name = "Baris Gunaydin", email = "abgunaydin94@gmail.com" }]
# Deps deliberately empty — add as the v0 spike actually needs them.
# Likely first additions: pystac-client, xarray, rioxarray, numpy, pandas, jinja2, httpx
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iz"]
